@@ -19,7 +19,7 @@ BEGIN {
   unshift @INC, "$FindBin::Bin/../lib";
 };
 
-use KorAP::XML::TEI qw!remove_xml_comments!;
+use KorAP::XML::TEI qw!remove_xml_comments replace_entities!;
 use KorAP::XML::TEI::Tokenizer::External;
 use KorAP::XML::TEI::Tokenizer::Conservative;
 use KorAP::XML::TEI::Tokenizer::Aggressive;
@@ -235,6 +235,7 @@ MAIN: while ( <$input_fh> ){
     next;
   };
 
+  $_ = replace_entities($_);
   $_ = decode($input_enc, $_);
 
   if ( index($_, $_TEXT_BODY) >= 0 && m#^(.*)<${_TEXT_BODY}(?: [^>]*)?>(.*)$# ){
@@ -257,6 +258,7 @@ MAIN: while ( <$input_fh> ){
     while (<$input_fh>) {
 
       $_ = remove_xml_comments( $input_fh, $_ );
+      $_ = replace_entities($_);
       $_ = decode($input_enc, $_);
 
       # ~ end of text body ~
